--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 db.sqlite3
-apps/ventas/veterinario/migrations/*
-apps/ventas/ventas/migrations/*
+apps/veterinario/migrations/*
+apps/ventas/migrations/*
