actualizando gitignore archivos cache

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@ db.sqlite3
 apps/veterinario/migrations/*
 apps/ventas/migrations/*
 apps/users/migrations/*
+apps/users/__pycache__/*
+apps/ventas/__pycache__/*
+apps/veterinario/__pycache__/*
 secret.json
 
