--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@ secret.json
 .coverage
 coverage.xml
 .scannerwork
+.pytest_cache
 db.sqlite3
 apps/veterinario/migrations/*
 apps/ventas/migrations/*
 apps/users/migrations/*
+apps/prueba/migrations/*
 apps/users/__pycache__/*
 apps/ventas/__pycache__/*
 apps/veterinario/__pycache__/*
